# systemd-network-manager

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
src/: main.rs  network_manager_iface.rs  networkd_iface.rs  systemd_iface.rs
units/: captive-portal.target  offline.target  online.target  systemd-network-manager.service
units/system/: systemd-network-manager.service  systemd-network-manager.service.in
units/user/: systemd-network-manager.service  systemd-network-manager.service.in
