[package]
name = "systemd-network-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", default-features = false, features = ["std"] }
clap = { version = "4.3.19", default-features = false, features = ["derive", "std"] }
futures = { version = "0.3.28", default-features = false }
tokio = { version = "1.29.1", default-features = false, features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }

[profile.release]
lto = "yes"
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
